feat: final 7